--- a/session1/README.ME
+++ b/session1/README.ME
@@ -1,4 +1,4 @@
-Write a class library that parse a integer number. 
+Implement a class library that parses integer input. 
 
 For each multiple of 3, return "Fizz" instead of the number. 
 
@@ -7,3 +7,13 @@ For each multiple of 5, return "Buzz" instead of the number.
 For numbers which are multiples of both 3 and 5, return "FizzBuzz" instead of the number
 
 For other numbers, return string of the input number
+
+
+````
+	cd FizzBuzz.Test
+	dotnet test
+
+or 
+
+	dotnet watch test
+````
